[gd_scene load_steps=10 format=3 uid="uid://cg2ht6nga1fv5"]

[ext_resource type="PackedScene" uid="uid://du42omhuuhng1" path="res://Game/Unit/Range/range.tscn" id="1_pkoti"]
[ext_resource type="Script" path="res://Game/Unit/Range/Archer/archer.gd" id="2_hr6gt"]
[ext_resource type="PackedScene" uid="uid://sjbacyfk77ms" path="res://Game/Items/arrow.tscn" id="3_5nue2"]
[ext_resource type="Texture2D" uid="uid://cgaq2kn3r6n72" path="res://Assets/Sprites/Factions/Knights/Troops/Archer/Archer_Blue.png" id="3_t7bi5"]
[ext_resource type="Resource" uid="uid://wdk7177upcny" path="res://Data/Units/archer_data.tres" id="4_ak2bf"]
[ext_resource type="AnimationLibrary" uid="uid://4nugthn22m52" path="res://Game/Unit/Range/Archer/archer_anim.res" id="4_bfd2e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_guto0"]
radius = 450.0

[sub_resource type="ViewportTexture" id="ViewportTexture_5aus7"]
viewport_path = NodePath("MissNodes/SubViewport")

[sub_resource type="Gradient" id="Gradient_7xdaw"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Archer" instance=ExtResource("1_pkoti")]
z_index = 100
collision_layer = 2
collision_mask = 3
script = ExtResource("2_hr6gt")
arrow_scene = ExtResource("3_5nue2")
unit_data = ExtResource("4_ak2bf")

[node name="Shoot Cooldown" type="Timer" parent="." index="0"]
wait_time = 2.0
one_shot = true

[node name="DamageComponent" parent="." index="2"]
damage_amount = 25.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
libraries = {
"": ExtResource("4_bfd2e")
}

[node name="SpotArea" parent="." index="5"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpotArea" index="0"]
position = Vector2(17, -9)
shape = SubResource("CircleShape2D_guto0")
debug_color = Color(0.945098, 0.203922, 0.301961, 0.419608)

[node name="AttackArea" parent="." index="6"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea" index="0"]
debug_color = Color(0.592157, 0.541176, 0.258824, 0.419608)

[node name="ArrowSpawnPoint" type="Marker2D" parent="." index="7"]
position = Vector2(-10, 63)

[node name="CharacterSprite" parent="." index="11"]
texture = ExtResource("3_t7bi5")
hframes = 8
vframes = 7
frame = 22

[node name="NavigationAgent2D" parent="." index="12"]
path_postprocessing = 0

[node name="MissNodes" type="Node2D" parent="." index="13"]

[node name="SubViewport" type="SubViewport" parent="MissNodes" index="0"]
disable_3d = true
transparent_bg = true
size = Vector2i(64, 32)

[node name="Label" type="Label" parent="MissNodes/SubViewport" index="0"]
offset_right = 32.0
offset_bottom = 32.0
text = "MISS!"

[node name="CPUParticles2D" type="CPUParticles2D" parent="MissNodes" index="1"]
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
texture = SubResource("ViewportTexture_5aus7")
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(0, 0)
gravity = Vector2(0, -500)
orbit_velocity_min = -0.5
orbit_velocity_max = 0.5
linear_accel_min = -12.09
linear_accel_max = 10.99
radial_accel_min = -6.85
radial_accel_max = 48.35
damping_max = 17.582
color_ramp = SubResource("Gradient_7xdaw")
